--- a/DockerFile
+++ b/DockerFile
@@ -4,8 +4,8 @@ ADD . /usr/src/app
 RUN npm install
 WORKDIR /usr/src/app
 
-ENTRYPOINT /usr/src/app/docker-entrypoint.sh
-
 COPY package.json
 
-EXPOSE 8080
+CMD server.js
+
+EXPOSE 8000
