--- a/DockerFile
+++ b/DockerFile
@@ -1,10 +1,15 @@
+# from node image
 FROM node:8.0.0-alpine
+
 
 ADD . /usr/src/app
 RUN npm install
+
+#create app directory
+
 WORKDIR /usr/src/app
 
-COPY package.json
+COPY package.json /app
 
 CMD server.js
 
