--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A demo using express JS to build an API.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server.js"
       },
   "keywords": [
     "express",
