--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A demo using express JS to build an API.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
-      },
+    "start": "node server.js",
+    "test": "mocha tests/test_server.js"
+  },
   "keywords": [
     "express",
     "js",
@@ -18,6 +19,7 @@
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "mocha": "^4.0.1",
     "mongoose": "^4.13.7"
   },
   "directories": {
